--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Estudos de cypress",
   "main": "index.js",
   "scripts": {
+    "cy:open": "cypress open",
     "test": "cypress run"
   },
   "keywords": [
@@ -16,5 +17,28 @@
   "license": "MIT",
   "dependencies": {
     "cypress": "^7.6.0"
-  }
+  },
+  "devDependencies": {
+    "cypress-cucumber-preprocessor": "^4.1.3",
+    "fs-extra": "^10.0.0",
+    "jsonschema": "^1.4.0",
+    "rimraf": "^3.0.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions":false,
+    "step_definitions": "cypress/integration/step_definitions",
+    "cucumberJson": { 
+      "generate": false,
+      "outputFolder": "cypress/report/cucumber-json"
+    }
+     
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/matheusarmandoo/CypressEstudos.git"
+  },
+  "bugs": {
+    "url": "https://github.com/matheusarmandoo/CypressEstudos/issues"
+  },
+  "homepage": "https://github.com/matheusarmandoo/CypressEstudos#readme"
 }
